[package]
name = "drone_updater"
version = "0.1.0"
edition = "2021"
authors = ["Sanghyo Lee <ryan@cellaxon.com>"]
description = "Drone Updater"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cellaxon_base = "22.*"
e_drone = "22.*"

serialport="4.0.0"
rand = "0.8"
argh = "0.1"
crossterm = "0.24.0"
tui = { version = "0.18.0", default-features = false, features = ['crossterm'] }
